samples/_failures_safe/1761139533_566d64_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c288d80.c: In function ‘main’:
./samples/SAFE/__tmp_5c288d80.c:135:12: error: expected declaration or statement at end of input
  135 |     struct LogAnalyzer analyzer;
      |            ^~~~~~~~~~~
